<resources>
    <string name="app_name">Jago Masak</string>
    <string name="nama">Name</string>
    <string name="username">\@username</string>
    <string name="status">STATUS ACC</string>
    <string name="challenge_history">Challenge History</string>
    <string name="favorite">Favorite Recipes</string>
    <string name="text">You haven’t started yet.\n
        Start your challenge to feel\n
        the experience.</string>
    <string name="name2">Name :</string>
    <string name="username2">Username</string>
    <string name="change_password">Change Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="copyright">Jago Masak Merupakan Aplikasi untuk bisa belajar memasak dengan
    cara menonton dan miah resep serta bahan yang sudah disediakan oleh sang chef untuk mempermudah
    user dalam belajar memasak.\n\n
    Contact :\n
    Email     : jagomasak@gmail.com\n
    Instagram : JagoMasak.id</string>
    <string name="setting">Setting</string>
    <string name="image_splash">image_splash</string>
</resources>